# funnelius

./: README.md  general_file_name  pyproject.toml  sample.ipynb  sample_data_vehicle.csv
.ipynb_checkpoints/: sample-checkpoint.ipynb
src/: functions.py  interactive.py
src/funnelius/: __init__.py  functions.py  interactive.py  sample_data_vehicle  sample_data_vehicle_compare
src/funnelius.egg-info/: PKG-INFO  SOURCES.txt
src/funnelius/.ipynb_checkpoints/: functions-checkpoint.py
src/funnelius_yaseen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
